test/classes/dinan/use_of_uninitialized_field.good
use_of_uninitialized_field.chpl:2: error: 'y' used before defined (first used here)
