test/classes/dinan/use_of_uninitialized_field.chpl
class C {
  var x: int = y;
  var y: int = 1;
}

var c: C = new C();

writeln(c.x, " ", c.y);
